2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/controls/button.c (PB_Paint, GB_Paint): Declare variables
	before any statements are processed in the scope.
	* lib/user32/controls/combo.c (CBPaintButton): Ditto.
	* lib/user32/windows/accel.c (TranslateAcceleratorA): Ditto.
	* subsys/win32k/include/class.h (W32kGetClassLong): Fix prototype.
	* subsys/win32k/ntuser/class.c (W32kGetClassLong): Match prototype.
	* subsys/win32k/ntuser/windc.c (DceAllocDCE): Ditto.
	* subsys/win32k/ntuser/window.c (DestroyThreadWindows): Ditto.

2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rgenstat/rgenstat.c (process_directory): Fix building on Windows.

2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rgenstat/rgenstat.c (API_INFO): Add filename field.
	(path_to_url, get_filename): New functions.
	(parse_file, process_directory): Build cvs path.
	(generate_xml_for_component): Set file attribute on a function.
	* tools/rgenstat/web/rapistatus.css (.h): New class.
	* tools/rgenstat/web/rapistatus.js (clickHandler): Go to the file in
	ViewCVS on click on a function.
	* tools/rgenstat/web/rapistatus.xsl: Handle file attribute.

2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/win32k/objects/region.c (W32kFillRgn): Fix syntax error.

2003-07-11  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/rgenstat/rgenstat.c (get_previous_identifier): Skip end-of-line
	characters when searching for identifier.
	(parse_file): Print a warning if no identifier is found.

2003-07-10  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* subsys/win32k/objects/region.c: (W32kFillRgn) Implement.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/winspool/stubs.c: Add @implemented and @unimplemented to APIs.

2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/wsock32/stubs.c: Add @implemented and @unimplemented to APIs.
